include/dss_capi.h

    /*! 
    Array of Sensor names.
    */
    DSS_CAPI_DLL void Sensors_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Number of Sensors in Active Circuit.
    */
    DSS_CAPI_DLL int32_t Sensors_Get_Count(void);
    /*! 
    Array of doubles for the line current measurements; don't use with kWS and kVARS.
    */
    DSS_CAPI_DLL void Sensors_Get_Currents(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Sets the first sensor active. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t Sensors_Get_First(void);
    /*! 
    True if measured voltages are line-line. Currents are always line currents.
    */
    DSS_CAPI_DLL uint16_t Sensors_Get_IsDelta(void);
    /*! 
    Array of doubles for Q measurements. Overwrites Currents with a new estimate using kWS.
    */
    DSS_CAPI_DLL void Sensors_Get_kVARS(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Array of doubles for the LL or LN (depending on Delta connection) voltage measurements.
    */
    DSS_CAPI_DLL void Sensors_Get_kVS(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Array of doubles for P measurements. Overwrites Currents with a new estimate using kVARS.
    */
    DSS_CAPI_DLL void Sensors_Get_kWS(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Full Name of the measured element
    */
    DSS_CAPI_DLL const char* Sensors_Get_MeteredElement(void);
    /*! 
    Number of the measured terminal in the measured element.
    */
    DSS_CAPI_DLL int32_t Sensors_Get_MeteredTerminal(void);
    /*! 
    Name of the active sensor.
    */
    DSS_CAPI_DLL const char* Sensors_Get_Name(void);
    /*! 
    Sets the next Sensor active. Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Sensors_Get_Next(void);
    /*! 
    Assumed percent error in the Sensor measurement. Default is 1.
    */
    DSS_CAPI_DLL double Sensors_Get_PctError(void);
    /*! 
    True if voltage measurements are 1-3, 3-2, 2-1.
    */
    DSS_CAPI_DLL uint16_t Sensors_Get_ReverseDelta(void);
    /*! 
    Weighting factor for this Sensor measurement with respect to other Sensors. Default is 1.
    */
    DSS_CAPI_DLL double Sensors_Get_Weight(void);
    DSS_CAPI_DLL void Sensors_Reset(void);
    DSS_CAPI_DLL void Sensors_ResetAll(void);
    DSS_CAPI_DLL void Sensors_Set_Currents(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_IsDelta(uint16_t Value);
    DSS_CAPI_DLL void Sensors_Set_kVARS(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_kVS(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_kWS(const double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_MeteredElement(const char* Value);
    DSS_CAPI_DLL void Sensors_Set_MeteredTerminal(int32_t Value);
    /*! 
    Set the active Sensor by name.
    */
    DSS_CAPI_DLL void Sensors_Set_Name(const char* Value);
    DSS_CAPI_DLL void Sensors_Set_PctError(double Value);
    DSS_CAPI_DLL void Sensors_Set_ReverseDelta(uint16_t Value);
    DSS_CAPI_DLL void Sensors_Set_Weight(double Value);
    /*! 
    Voltage base for the sensor measurements. LL for 2 and 3-phase sensors, LN for 1-phase sensors.
    */
    DSS_CAPI_DLL double Sensors_Get_kVbase(void);
    DSS_CAPI_DLL void Sensors_Set_kVbase(double Value);